# mcp_rustdoc

./: .gitignore  Cargo.toml  DISTRIBUTION.md  LICENSE  README.md  default.nix  flake.nix
examples/: client.rs  example-flake.nix  python_client.py  usage.sh
src/: cache.rs  docs_parser.rs  lib.rs  main.rs  mcp.rs  server.rs
tests/: integration_test.rs
