[package]
name = "rdoc-mcp"
version = "0.1.0"
edition = "2024"
description = "MCP implementation for querying Rust API documentation from docs.rs"
authors = ["MCP Developer"]
license = "MIT"
repository = "https://github.com/cyberelf/mcp_rustdoc"
readme = "README.md"
keywords = ["mcp", "documentation", "docs-rs"]
categories = ["development-tools", "development-tools::documentation"]

[dependencies]
rmcp = { version = "0.1.5", features = ["server", "transport-sse-server", "transport-io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44.2", features = ["full"] }
thiserror = "2.0.12"
url = "2.3"
anyhow = "1.0.97"
clap = { version = "4.5", features = ["derive"] }
scraper = "0.23.1"
async-trait = "0.1.88"
itertools = "0.14.0"

[dev-dependencies]
mockito = "1.2.0"
assert_json = "0.1"
rmcp = { version = "0.1.5", features = ["client", "transport-sse", "transport-child-process"] }
tokio = { version = "1.44.1", features = ["full", "tracing"] }
console-subscriber = "0.4.1"
tracing-subscriber = "0.3.19"
tempfile = "3.19.1"

[[example]]
name = "client"
path = "examples/client.rs"

[profile.release]
opt-level = 3
lto = true 
